CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(libxpf)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Debug")
# SET(CMAKE_BUILD_TYPE "Release")
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(MSVC)
  IF(DEFINED WIN32_MSVC_MT)
    SET(CMAKE_C_FLAGS_DEBUG_INIT      "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1")
    SET(CMAKE_C_FLAGS_MINSIZEREL_INIT           "/MT /O1 /Ob1 /D NDEBUG")
    SET(CMAKE_C_FLAGS_RELEASE_INIT              "/MT /O2 /Ob2 /D NDEBUG")
    SET(CMAKE_C_FLAGS_RELWITHDEBINFO_INIT   "/MT /Zi /O2 /Ob1 /D NDEBUG")
    SET(CMAKE_CXX_FLAGS_DEBUG_INIT    "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1")
    SET(CMAKE_CXX_FLAGS_MINSIZEREL_INIT         "/MT /O1 /Ob1 /D NDEBUG")
    SET(CMAKE_CXX_FLAGS_RELEASE_INIT            "/MT /O2 /Ob2 /D NDEBUG")
    SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO_INIT "/MT /Zi /O2 /Ob1 /D NDEBUG")
  ENDIF(DEFINED WIN32_MSVC_MT)
ENDIF(MSVC)

ADD_SUBDIRECTORY("./src")
#ADD_SUBDIRECTORY("./test")

