CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(libxpf)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Debug")
# SET(CMAKE_BUILD_TYPE "Release")
ENDIF(NOT CMAKE_BUILD_TYPE)

IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
	SET(BUILD_WITH_CLANG "1")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-value")
ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
	SET(BUILD_WITH_GNU "1")
ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
	SET(BUILD_WITH_ICC "1")
ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	SET(BUILD_WITH_MSVC "1")
ELSE()
	MESSAGE("Un-recognizable compiler ID - ${CMAKE_CXX_COMPILER_ID}")
ENDIF()

IF(MSVC)
  IF(DEFINED WIN32_MSVC_MT)
    SET(CMAKE_C_FLAGS_DEBUG_INIT      "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1")
    SET(CMAKE_C_FLAGS_MINSIZEREL_INIT           "/MT /O1 /Ob1 /D NDEBUG")
    SET(CMAKE_C_FLAGS_RELEASE_INIT              "/MT /O2 /Ob2 /D NDEBUG")
    SET(CMAKE_C_FLAGS_RELWITHDEBINFO_INIT   "/MT /Zi /O2 /Ob1 /D NDEBUG")
    SET(CMAKE_CXX_FLAGS_DEBUG_INIT    "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1")
    SET(CMAKE_CXX_FLAGS_MINSIZEREL_INIT         "/MT /O1 /Ob1 /D NDEBUG")
    SET(CMAKE_CXX_FLAGS_RELEASE_INIT            "/MT /O2 /Ob2 /D NDEBUG")
    SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO_INIT "/MT /Zi /O2 /Ob1 /D NDEBUG")
  ENDIF(DEFINED WIN32_MSVC_MT)
ENDIF(MSVC)

ADD_SUBDIRECTORY("./src")
ADD_SUBDIRECTORY("./tests/threading")
ADD_SUBDIRECTORY("./tests/atomicops")
ADD_SUBDIRECTORY("./tests/string")
ADD_SUBDIRECTORY("./tests/delegate")
ADD_SUBDIRECTORY("./tests/allocators")
ADD_SUBDIRECTORY("./tests/network")


