CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(libxpf)

FILE(GLOB EXPORTED_HEADER_FILES "${CMAKE_SOURCE_DIR}/include/xpf/*.h")
FILE(GLOB INTERNAL_HEADER_FILES "${CMAKE_SOURCE_DIR}/src/platform/posix/*.hpp" "${CMAKE_SOURCE_DIR}/src/platform/windows/*.hpp")
FILE(GLOB INTERNAL_SRC_FILES "${CMAKE_SOURCE_DIR}/src/*.cpp")
SOURCE_GROUP("Public Headers" FILES ${EXPORTED_HEADER_FILES})
SOURCE_GROUP("Private Headers" FILES ${INTERNAL_HEADER_FILES})

FIND_PACKAGE(Threads)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include" "${CMAKE_SOURCE_DIR}/external/STLport-5.2.1/stlport")
LINK_DIRECTORIES("${CMAKE_SOURCE_DIR}/external/STLport-5.2.1/lib")





ADD_LIBRARY(xpf SHARED
  ${INTERNAL_SRC_FILES}
  ${PLATFORM_DEP_FILES}
)
SET_PROPERTY(TARGET xpf PROPERTY ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/lib")
SET_PROPERTY(TARGET xpf PROPERTY RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/bin")
SET_PROPERTY(TARGET xpf PROPERTY DEFINE_SYMBOL XPF_BUILD_LIBRARY)
IF(WIN32)
  ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
  TARGET_LINK_LIBRARIES(xpf ${CMAKE_THREAD_LIBS_INIT} debug stlportd.5.2 optimized stlport.5.2)
ELSE(WIN32)
  TARGET_LINK_LIBRARIES(xpf ${CMAKE_THREAD_LIBS_INIT} stlport.5.2)
ENDIF(WIN32)






ADD_LIBRARY(xpf_static STATIC
  ${INTERNAL_SRC_FILES}
  ${PLATFORM_DEP_FILES}
)
SET_PROPERTY(TARGET xpf_static PROPERTY ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/lib")
SET_PROPERTY(TARGET xpf_static PROPERTY APPEND_STRING PROPERTY COMPILE_DEFINITIONS XPF_BUILD_STATIC_LIBRARY)
IF(WIN32)
  ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
ENDIF(WIN32)
