CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(libxpf)

FILE(GLOB EXPORTED_HEADER_FILES "${CMAKE_SOURCE_DIR}/include/xpf/*.h")
FILE(GLOB INTERNAL_HEADER_FILES "${CMAKE_SOURCE_DIR}/src/platform/*.hpp")
FILE(GLOB INTERNAL_SRC_FILES "${CMAKE_SOURCE_DIR}/src/*.cpp")
SOURCE_GROUP("Exported Headers" FILES ${EXPORTED_HEADER_FILES})
SOURCE_GROUP("Internal Headers" FILES ${INTERNAL_HEADER_FILES})

IF(NOT WIN32)
  FIND_PACKAGE(Threads)
ENDIF(NOT WIN32)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include")





ADD_LIBRARY(xpf SHARED
  ${EXPORTED_HEADER_FILES}
  ${INTERNAL_HEADER_FILES}
  ${INTERNAL_SRC_FILES}
)
SET_PROPERTY(TARGET xpf PROPERTY ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/lib")
SET_PROPERTY(TARGET xpf PROPERTY RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/bin")
SET_PROPERTY(TARGET xpf PROPERTY LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/bin")
SET_PROPERTY(TARGET xpf PROPERTY DEFINE_SYMBOL XPF_BUILD_LIBRARY)
IF(WIN32)
  ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
  TARGET_LINK_LIBRARIES(xpf ${CMAKE_THREAD_LIBS_INIT} ws2_32)
ELSE(WIN32)
  TARGET_LINK_LIBRARIES(xpf ${CMAKE_THREAD_LIBS_INIT})
ENDIF(WIN32)






ADD_LIBRARY(xpf_static STATIC
  ${EXPORTED_HEADER_FILES}
  ${INTERNAL_HEADER_FILES}
  ${INTERNAL_SRC_FILES}
)
SET_PROPERTY(TARGET xpf_static PROPERTY ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/lib")
SET_PROPERTY(TARGET xpf_static PROPERTY APPEND_STRING PROPERTY COMPILE_DEFINITIONS XPF_BUILD_STATIC_LIBRARY)
IF(WIN32)
  ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
ENDIF(WIN32)
