CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(libxpf)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include" "${CMAKE_SOURCE_DIR}/external/STLport-5.2.1/stlport")





ADD_EXECUTABLE(allocator_test
    allocator_test.cpp
)
SET_PROPERTY(TARGET allocator_test PROPERTY RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/bin")
IF(WIN32)
  ADD_DEFINITIONS(-DUNICODE -D_UNICODE)  
ENDIF(WIN32)
TARGET_LINK_LIBRARIES(allocator_test xpf)

