CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(libxpf)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include" "${CMAKE_SOURCE_DIR}/external/STLport-5.2.1/stlport")





ADD_EXECUTABLE(threading_test
    threading_test.cpp
)
SET_PROPERTY(TARGET threading_test PROPERTY RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build/bin")
IF(WIN32)
  ADD_DEFINITIONS(-DUNICODE -D_UNICODE)  
ENDIF(WIN32)
TARGET_LINK_LIBRARIES(threading_test xpf)

